--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
 
     implementation "androidx.fragment:fragment-ktx:1.3.0-beta01"
 
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
     // Material design
     implementation "com.google.android.material:material:$rootProject.materialVersion"
 
