--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,13 @@ android {
     dataBinding {
         enabled = true
     }
+    sourceSets {
+        main {
+            resources {
+                srcDirs 'src\\main\\resources', 'src\\test\\resources'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -52,6 +59,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersion"
@@ -78,7 +87,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1'
+
+    testImplementation "org.mockito:mockito-android:3.1.0"
+    testImplementation 'org.mockito:mockito-inline:3.1.0'
+    androidTestImplementation "org.mockito:mockito-android:3.1.0"
 
     testImplementation("com.squareup.okhttp3:mockwebserver:4.9.0")
-
 }
