--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.1"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
 
 
         // NOTE: Do not place your application dependencies here; they belong
