--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'kotlin-allopen'
+apply plugin: 'dagger.hilt.android.plugin'
 
 allOpen {
     // allows mocking for classes w/o directly opening them for release builds
     annotation 'com.example.catganisation.utils.OpenForTesting'
 }
-
 
 android {
     compileSdkVersion 30
@@ -61,10 +61,7 @@ dependencies {
 
     // Retrofit Coroutines Support
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -83,7 +80,6 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
-
     implementation "androidx.fragment:fragment-ktx:1.3.0-beta01"
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -91,13 +87,18 @@ dependencies {
     // Material design
     implementation "com.google.android.material:material:$rootProject.materialVersion"
 
+    //Hilt
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_jetpack"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    kapt "androidx.hilt:hilt-compiler:$hilt_jetpack"
+
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1'
-
     testImplementation "org.mockito:mockito-android:3.1.0"
     testImplementation 'org.mockito:mockito-inline:3.1.0'
     androidTestImplementation "org.mockito:mockito-android:3.1.0"
