--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.10"
+    ext.hilt_version = '2.28-alpha'
 
     repositories {
         google()
@@ -10,14 +11,11 @@ buildscript {
         }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.1"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
-
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
@@ -41,4 +39,6 @@ ext {
     gradleVersion = '3.4.0'
     navigationVersion = "2.3.1"
     dataBindingCompilerVersion = gradleVersion
+    hilt_version = '2.28-alpha'
+    hilt_jetpack = "1.0.0-alpha02"
 }
